# OpencvProject

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ruiyuan/opencvapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ruiyuan/opencvapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ruiyuan/opencvapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  dummy.cpp
nativelib/src/main/java/org/opencv/: NativeLib.java
nativelib2/: build.gradle
nativelib2/include/opencv2/dnn/: dnn.hpp
nativelib2/src/androidTest/java/com/ruiyuan/nativelib2/: ExampleInstrumentedTest.java
nativelib2/src/main/cpp/: CMakeLists.txt  nativelib.cpp  nativelib.h
nativelib2/src/main/java/com/ruiyuan/nativelib2/: OpenCVSample.java
nativelib2/src/test/java/com/ruiyuan/nativelib2/: ExampleUnitTest.java
